WOLO-00 SecurityConfig